firestore initilization, collection view, table view, event detail vc

--- a/NIBM EVENTS-AKT-DE-SILVA-COBSCCOMP182P027/Info.plist
+++ b/NIBM EVENTS-AKT-DE-SILVA-COBSCCOMP182P027/Info.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>CFBundleIconFiles</key>
 	<array>
-		<string>NIBM Events 2</string>
+		<string>NIBM Events 2.jpeg</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
