face id authentication done with profile view controller

--- a/NIBM EVENTS-AKT-DE-SILVA-COBSCCOMP182P027/Info.plist
+++ b/NIBM EVENTS-AKT-DE-SILVA-COBSCCOMP182P027/Info.plist
@@ -32,6 +32,10 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Message</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
